--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -28,6 +28,10 @@
   opacity: 0.7;
 }
 
+.navigation__link_color_black {
+  color: #000;
+}
+
 .navigation__btn {
   background-color: #2be080;
   border: none;
@@ -58,7 +62,7 @@
 .navigation__btn-burger {
   background-image: url(../../images/burger.svg);
   background-repeat: no-repeat;
-  background-color: #fff;
+  background-color: transparent;
   background-position: center;
   border: none;
   display: block;
@@ -71,6 +75,10 @@
 
 .navigation__btn-burger:hover {
   opacity: 0.8;
+}
+
+.navigation__btn-burger_color_white {
+  background-image: url(../../images/burger-white.svg);
 }
 
 .navigation__menu-background {
@@ -89,6 +97,7 @@
 }
 
 .navigation__menu {
+  background-color: #fff;
   position: fixed;
   height: 100%;
   width: 100%;
@@ -128,7 +137,7 @@
 }
 
 .navigation__nav_name_auth {
-  background-color: #fff;
+  background-color: transparent;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -256,6 +265,7 @@
     position: static;
     width: auto;
     height: auto;
+    background-color: transparent;
   }
 
   .navigation__btn-close {
@@ -289,6 +299,10 @@
     line-height: 1.29;
   }
 
+  .navigation__link_color_white {
+    color: #fff;
+  }
+
   .navigation__link_active {
     font-weight: 500;
   }
@@ -299,5 +313,13 @@
 
   .navigation__btn_name_auth {
     margin-left: 30px;
+  }
+
+  .navigation__btn_color_white {
+    color: #fff;
+  }
+
+  .navigation__path_color_white {
+    fill: #fff;
   }
 }
