--- a/src/components/PageNotFound/PageNotFound.css
+++ b/src/components/PageNotFound/PageNotFound.css
@@ -49,6 +49,10 @@
   text-decoration: none;
   opacity: 1;
   transition: opacity 0.2s ease-in-out;
+  background-color: transparent;
+  border: none;
+  padding: 0;
+  cursor: pointer;
 }
 
 .error__link:hover {
