--- a/src/components/InfoTooltip/InfoTooltip.css
+++ b/src/components/InfoTooltip/InfoTooltip.css
@@ -1,4 +1,4 @@
-.error-popup {
+.info-popup {
   position: fixed;
   top: 0;
   left: 0;
@@ -13,9 +13,9 @@
   box-sizing: border-box;
 }
 
-.error-popup__container {
+.info-popup__container {
   background-color: #fff;
-  padding: 30px;
+  padding: 50px;
   width: 500px;
   max-width: 100%;
   box-sizing: border-box;
@@ -28,38 +28,37 @@
   align-items: center;
 }
 
-.error-popup__close {
-  position: absolute;
-  top: -30px;
-  right: -30px;
+.info-popup__close-btn {
+  background-image: url(../../images/close-white.svg);
+  background-repeat: no-repeat;
+  background-size: 100%;
   background-color: transparent;
   border: none;
-  padding: 0;
-  opacity: 1;
-  transition: opacity 0.2s ease-in-out;
   cursor: pointer;
+  position: absolute;
+  top: -33px;
+  right: -36px;
+  width: 40px;
+  height: 40px;
+  transition: opacity 0.2s ease-in-out;
+  opacity: 1;
 }
 
-.error-popup__close:hover {
+.info-popup__close-btn:hover {
   opacity: 0.8;
 }
 
-.error-popup__title {
+.info-popup__img {
+  width: 130px;
+  margin-bottom: 40px;
+}
+
+.info-popup__message {
   font-family: "Inter", Arial, Helvetica, sans-serif;
   font-weight: 500;
   font-size: 24px;
   line-height: 29px;
   text-align: center;
-  color: #ee3465;
-  margin: 0 0 30px;
-}
-
-.error-popup__message {
-  font-family: "Inter", Arial, Helvetica, sans-serif;
-  font-weight: 400;
-  font-size: 13px;
-  line-height: 16px;
-  text-align: center;
-  color: #000000;
+  color: #000;
   margin: 0;
 }
