--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -5,6 +5,9 @@
 .movie__img {
   margin-bottom: 10px;
   max-width: 100%;
+  height: 168px;
+  width: 300px;
+  object-fit: cover;
 }
 
 .movie__block {
@@ -14,11 +17,6 @@
 }
 
 .movie__title {
-  font-family: "Inter", Arial, Helvetica, sans-serif;
-  font-weight: 500;
-  font-size: 12px;
-  line-height: 15px;
-  color: #000000;
   margin: 0;
   max-width: 260px;
   text-overflow: ellipsis;
@@ -27,6 +25,21 @@
   -webkit-box-orient: vertical;
   overflow: hidden;
   height: 30px;
+}
+
+.movie__link {
+  font-family: "Inter", Arial, Helvetica, sans-serif;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 15px;
+  color: #000000;
+  text-decoration: none;
+  opacity: 1;
+  transition: opacity 0.2s ease-in-out;
+}
+
+.movie__link:hover {
+  opacity: 0.7;
 }
 
 .movie__btn {
@@ -65,6 +78,11 @@
     margin-bottom: 13px;
   }
 
+  .movie__img {
+    width: 339px;
+    height: 190px;
+  }
+
   .movie__title {
     font-size: 13px;
     line-height: 16px;
@@ -79,6 +97,11 @@
 }
 
 @media screen and (min-width: 1024px) {
+  .movie__img {
+    width: 270px;
+    height: 151px;
+  }
+
   .movie__title {
     max-width: 270px;
   }
