--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -44,6 +44,7 @@
   border-bottom: 1px solid #e8e8e8;
   display: grid;
   grid-template-columns: 1fr 1fr;
+  position: relative;
 }
 
 .profile__text {
@@ -76,12 +77,40 @@
   border-color: #2be080;
 }
 
+.profile__input-error {
+  font-family: "Inter", Arial, Helvetica, sans-serif;
+  font-weight: 400;
+  font-size: 10px;
+  line-height: 12px;
+  color: #ee3465;
+  display: block;
+  position: absolute;
+  top: 43px;
+  right: 0;
+  z-index: 10;
+  text-align: right;
+}
+
 .profile__buttons {
   display: flex;
   flex-direction: column;
   align-items: center;
   margin-top: 30px;
   width: 100%;
+  position: relative;
+}
+
+.profile__error {
+  position: absolute;
+  width: 100%;
+  text-align: center;
+  left: 0;
+  bottom: 60px;
+  font-family: "Inter", Arial, Helvetica, sans-serif;
+  font-weight: 400;
+  font-size: 11px;
+  line-height: 13px;
+  color: #ee3465;
 }
 
 .profile__btn {
@@ -130,13 +159,13 @@
   opacity: 0.8;
 }
 
-.profile__btn_name_save:disabled {
+.profile__btn_disabled {
   background-color: #f8f8f8;
   color: #c2c2c2;
   cursor: default;
 }
 
-.profile__btn_name_save:disabled:hover {
+.profile__btn_disabled:hover {
   opacity: 1;
 }
 
